remove device id
