# app/Http/Requests/StoreUserRequest.php
@@ -32,7 +32,6 @@ class StoreUserRequest extends FormRequest
             'ic' => ['required', 'string', 'max:255'],
             'email' => ['required', 'string', 'email', 'max:255', 'unique:' . User::class],
             'password' => ['required', Rules\Password::defaults(), 'string'],
-            'deviceId' => ['required', 'string'],
             'name' => ['nullable', 'string']
         ];
     }
